@@ -92,7 +92,7 @@ local ($file, $dom, $user, $webmin, $template, $ip, $virt, $pass, $parent,
        $prefix, $virtalready, $email) = @_;
 
 # Check for prefix clash
-$prefix ||= &compute_prefix($dom, undef, $parent);
+$prefix ||= &compute_prefix($dom, undef, $parent, 1);
 local $pclash = &get_domain_by("prefix", $prefix);
 $pclash && &error("A virtual server using the prefix $prefix already exists");
 
@@ -256,7 +256,7 @@ if (!$parent && !$pass) {
 
 # Create the virtual server object
 local %dom;
-$prefix ||= &compute_prefix($dom, $group, $parent);
+$prefix ||= &compute_prefix($dom, $group, $parent, 1);
 %dom = ( 'id', &domain_id(),
 	 'dom', $dom,
          'user', $duser,
